# core_rover

./: .gitignore  CMakeLists.txt  README.md  package.xml
devel/: _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
include/: RTIMULib.ini
launch/: autonomous_localization.launch  autonomous_localization.launch.backup  autonomous_mapping.launch  autonomous_mapping_late.launch  autonomous_mapping_old.launch  autonomous_planning.launch  autonomous_slam.launch  autonomous_travel.launch  calibrate.launch  camera.launch  camera_server.launch  costmap_common_params.yaml  ekf_template.launch  elp_stereo_camera.launch  gps_conversion.launch  map_builder.launch  navsat_transform_template.launch  nova-global-map.launch  octomap_gen.launch  robot_localization.launch  robot_pose_ekf.launch  robot_state.launch  rtimulib_ros.launch  rviz.launch  stereo_image_proc.launch  stereo_map_builder.launch  stereo_odometry.launch  utm_odom.launch
msg/: CameraStatus.msg
params/: elp_standalone.urdf.xacro  elp_stereo_camera.rviz  elp_stereo_camera.urdf.xacro
scripts/: .play_uav_bag.sh.swp  .ummy_sensor_node.py.swp  a_star.py  arm.py  arm_reader.py  auto.py  auto2.py  auto_classes.py  auto_controller.py  auto_functions.py  auto_sm.py  auto_sm_test.py  bearing.py  cam_controller.py  camera_server.py  cameras.csv  camtest.py  controller_node.py  dummy_sensor_node.py  ert.py  gacc.py  gst_camera.py  heartbeat.py  navigation.py  objective_node.py  objective_node_stub.py  planner_controller_node.py  planner_node.py  play_uav_bag.sh  rover_manager.py  rover_sm.py  rover_sync.py  sensors_pub.py  steeringPID.py  tennis_loc.py  test.py  testAuto.py  testSector.py  ttyUSB1  tuner.py  (+1 more)
src/: .driver.cpp.swp  NovaAhrs.cpp  arm.py  battery_reader  battery_reader.cpp  controller_node.cpp  drill.cpp  driver.cpp  goal_node.cpp  gps_node.cpp  init.cpp  rtimulib_ros.cpp  sim_init.cpp  testTBDriver.cpp  testUART.cpp  tuner.cpp  utm_odometry_node.cpp  (+1 more)
(+49 files in other folders)
